--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,24 +11,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout the repository
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      # 3. Upgrade pip and install Buildozer
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install cython
-          pip install buildozer
+          pip install --upgrade buildozer
 
+      # 4. Set ANDROID_HOME environment variable
+      - name: Set ANDROID_HOME
+        run: echo "ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
+
+      # 5. Install Android SDK packages and accept licenses
+      - name: Install Android SDK packages
+        run: |
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;36.1.0" "platforms;android-36"
+
+      # 6. Build APK using Buildozer
       - name: Build APK
         run: |
           buildozer -v android debug
 
+      # 7. Upload APK as artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
