--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build MusicScripts APK
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout the repository
+      # 1. Checkout your repository
       - name: Checkout repo
         uses: actions/checkout@v3
 
@@ -21,29 +21,23 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 3. Upgrade pip and install Buildozer
+      # 3. Upgrade pip and install Buildozer + Cython
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install cython
           pip install --upgrade buildozer
 
-      # 4. Set ANDROID_HOME environment variable
-      - name: Set ANDROID_HOME
-        run: echo "ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
+      # 4. Install Java (required for Android build)
+      - name: Install Java
+        run: sudo apt-get update && sudo apt-get install -y openjdk-17-jdk
 
-      # 5. Install Android SDK packages and accept licenses
-      - name: Install Android SDK packages
-        run: |
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "build-tools;36.1.0" "platforms;android-36"
-
-      # 6. Build APK using Buildozer
+      # 5. Build APK using Buildozer (Buildozer handles SDK/NDK download & licenses)
       - name: Build APK
         run: |
           buildozer -v android debug
 
-      # 7. Upload APK as artifact
+      # 6. Upload APK as artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
