--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,16 +21,30 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 3. Install Buildozer and Cython
-      - name: Install Python dependencies
+      # 3. Install system dependencies for Buildozer / libffi
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            openjdk-17-jdk \
+            autoconf \
+            libtool \
+            automake \
+            pkg-config \
+            build-essential \
+            unzip \
+            zlib1g-dev \
+            git \
+            wget \
+            python3-dev \
+            python3-pip
+
+      # 4. Install Python dependencies
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install cython
           pip install --upgrade buildozer
-
-      # 4. Install Java (required for Android build)
-      - name: Install Java
-        run: sudo apt-get update && sudo apt-get install -y openjdk-17-jdk
 
       # 5. Pre-accept Android SDK licenses
       - name: Accept Android licenses
