--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,56 +1,44 @@
 name: Build MusicScripts APK
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ANDROIDNDK: /usr/local/lib/android/sdk/ndk/27.3.13750724
+      ANDROIDSDK: /home/runner/.buildozer/android/platform/android-sdk
+      ANDROIDAPI: 31
+      ANDROIDMINAPI: 21
 
     steps:
-      # 1. Checkout repository
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # 2. Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # 3. Install Buildozer and Cython
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cython
-          pip install --upgrade buildozer
+          pip install buildozer python-for-android
 
-      # 4. Install Java (required for Android build)
-      - name: Install Java
-        run: sudo apt-get update && sudo apt-get install -y openjdk-17-jdk
-
-      # 5. Pre-accept Android SDK licenses
-      - name: Accept Android licenses
+      # =========================
+      # PATCH libffi BEFORE BUILD
+      # =========================
+      - name: Patch libffi for LT_SYS_SYMBOL_USCORE
         run: |
-          mkdir -p $HOME/.android
-          yes | buildozer android update sdk
+          LIBFFI_DIR="$HOME/.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/build/other_builds/libffi/armeabi-v7a__ndk_target_21/libffi"
+          if [ -d "$LIBFFI_DIR" ]; then
+            cd "$LIBFFI_DIR"
+            echo "m4_pattern_allow([LT_SYS_SYMBOL_USCORE])" >> m4/libtool.m4
+            echo "Patched libffi to allow LT_SYS_SYMBOL_USCORE"
+          else
+            echo "libffi directory not found, skipping patch"
+          fi
 
-      # 6. Install autotools & libtool to fix autoreconf errors
-      - name: Install autotools & libtool
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y autoconf automake libtool pkg-config
-
-      # 7. Build APK using Buildozer
       - name: Build APK
-        run: buildozer -v android debug
-
-      # 8. Upload APK as artifact
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: musicscripts-apk
-          path: bin/*.apk
+        run: |
+          buildozer -v android debug
