--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,44 +1,45 @@
 name: Build MusicScripts APK
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ANDROIDNDK: /usr/local/lib/android/sdk/ndk/27.3.13750724
-      ANDROIDSDK: /home/runner/.buildozer/android/platform/android-sdk
-      ANDROIDAPI: 31
-      ANDROIDMINAPI: 21
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install buildozer python-for-android
+          pip install buildozer python-for-android cython kivy spotipy yt-dlp python-dotenv
 
-      # =========================
-      # PATCH libffi BEFORE BUILD
-      # =========================
-      - name: Patch libffi for LT_SYS_SYMBOL_USCORE
+      - name: Install system packages
         run: |
-          LIBFFI_DIR="$HOME/.buildozer/android/platform/build-arm64-v8a_armeabi-v7a/build/other_builds/libffi/armeabi-v7a__ndk_target_21/libffi"
+          sudo apt-get update
+          sudo apt-get install -y git zip unzip openjdk-17-jdk autoconf automake libtool pkg-config
+
+      - name: Prepare buildozer directories
+        run: |
+          buildozer android debug --build-dir .buildozer/android/platform/build-arm64-v8a_armeabi-v7a --ignore-setup-py --dry-run
+
+      - name: Patch libffi safely
+        run: |
+          LIBFFI_DIR=".buildozer/android/platform/build-arm64-v8a_armeabi-v7a/build/other_builds/libffi/armeabi-v7a__ndk_target_21/libffi"
           if [ -d "$LIBFFI_DIR" ]; then
-            cd "$LIBFFI_DIR"
-            echo "m4_pattern_allow([LT_SYS_SYMBOL_USCORE])" >> m4/libtool.m4
-            echo "Patched libffi to allow LT_SYS_SYMBOL_USCORE"
-          else
-            echo "libffi directory not found, skipping patch"
+            echo "m4_pattern_allow([LT_SYS_SYMBOL_USCORE])" >> $LIBFFI_DIR/m4/libtool.m4
+            echo "Patched libffi safely"
           fi
 
       - name: Build APK
         run: |
-          buildozer -v android debug
+          buildozer android debug
