--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -18,28 +19,27 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install buildozer python-for-android cython kivy spotipy yt-dlp python-dotenv
+          pip install buildozer cython
 
-      - name: Install system packages
+      - name: Ensure Android SDK commandline tools exist
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git zip unzip openjdk-17-jdk autoconf automake libtool pkg-config
-
-      - name: Prepare buildozer directories
-        run: |
-          buildozer android debug --build-dir .buildozer/android/platform/build-arm64-v8a_armeabi-v7a --ignore-setup-py --dry-run
-
-      - name: Patch libffi safely
-        run: |
-          LIBFFI_DIR=".buildozer/android/platform/build-arm64-v8a_armeabi-v7a/build/other_builds/libffi/armeabi-v7a__ndk_target_21/libffi"
-          if [ -d "$LIBFFI_DIR" ]; then
-            echo "m4_pattern_allow([LT_SYS_SYMBOL_USCORE])" >> $LIBFFI_DIR/m4/libtool.m4
-            echo "Patched libffi safely"
+          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
+          cd $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
+          if [ ! -d latest ]; then
+            curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+            unzip commandlinetools.zip
+            mv cmdline-tools latest
           fi
 
-      - name: Build APK
+      - name: Accept Android SDK licenses
+        run: yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+      - name: Install required build-tools and platforms
         run: |
-          buildozer android debug
+          $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;36.1.0" "platforms;android-31"
+
+      - name: Run Buildozer
+        run: buildozer -v android debug
