--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,27 +19,22 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Ensure Android SDK commandline tools exist
+      - name: Set Android SDK path
         run: |
-          mkdir -p $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
-          cd $HOME/.buildozer/android/platform/android-sdk/cmdline-tools
-          if [ ! -d latest ]; then
-            curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-            unzip commandlinetools.zip
-            mv cmdline-tools latest
-          fi
+          echo "ANDROIDSDK=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
+          echo "ANDROIDNDK=$HOME/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
+          echo "ANDROIDAPI=31" >> $GITHUB_ENV
+          echo "ANDROIDMINAPI=21" >> $GITHUB_ENV
 
       - name: Accept Android SDK licenses
-        run: yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-
-      - name: Install required build-tools and platforms
         run: |
-          $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager "build-tools;36.1.0" "platforms;android-31"
+          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
 
-      - name: Run Buildozer
-        run: buildozer -v android debug
+      - name: Build APK
+        run: |
+          buildozer -v android debug
