--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,32 +9,46 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ANDROIDSDK: $HOME/.buildozer/android/platform/android-sdk
+      ANDROIDNDK: $HOME/.buildozer/android/platform/android-ndk-r25b
+      ANDROIDAPI: 31
+      ANDROIDMINAPI: 21
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install buildozer cython
+    - name: Install system dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y openjdk-17-jdk unzip wget git build-essential
 
-      - name: Set Android SDK path
-        run: |
-          echo "ANDROIDSDK=$HOME/.buildozer/android/platform/android-sdk" >> $GITHUB_ENV
-          echo "ANDROIDNDK=$HOME/.buildozer/android/platform/android-ndk-r25b" >> $GITHUB_ENV
-          echo "ANDROIDAPI=31" >> $GITHUB_ENV
-          echo "ANDROIDMINAPI=21" >> $GITHUB_ENV
+    - name: Install Buildozer
+      run: |
+        python -m pip install --upgrade pip
+        pip install buildozer cython
 
-      - name: Accept Android SDK licenses
-        run: |
-          yes | $HOME/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+    - name: Ensure Android SDK cmdline-tools exist
+      run: |
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        mkdir -p $ANDROID_HOME/cmdline-tools/latest
+        if [ ! -f $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager ]; then
+          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip -d $ANDROID_HOME/cmdline-tools/latest
+        fi
 
-      - name: Build APK
-        run: |
-          buildozer -v android debug
+    - name: Install SDK packages and accept licenses
+      run: |
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+        yes | sdkmanager --install "platform-tools" "build-tools;36.1.0" --licenses
+
+    - name: Build APK
+      run: |
+        buildozer -v android debug
