--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,53 +2,53 @@ name: Build MusicScripts APK
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     env:
-      ANDROIDSDK: $HOME/.buildozer/android/platform/android-sdk
-      ANDROIDNDK: $HOME/.buildozer/android/platform/android-ndk-r25b
       ANDROIDAPI: 31
       ANDROIDMINAPI: 21
+      ANDROIDNDK: 27.3.13750724
+      ANDROIDSDK: $HOME/.buildozer/android/platform/android-sdk
+      PATH: $HOME/.buildozer/android/platform/apache-ant-1.9.4/bin:$PATH
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y openjdk-17-jdk unzip wget git build-essential
+        sudo apt install -y python3-pip git openjdk-17-jdk unzip zip wget
+        pip install --upgrade pip
+        pip install --user buildozer cython
 
-    - name: Install Buildozer
+    - name: Setup Android SDK
       run: |
-        python -m pip install --upgrade pip
-        pip install buildozer cython
-
-    - name: Ensure Android SDK cmdline-tools exist
-      run: |
-        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
-        mkdir -p $ANDROID_HOME/cmdline-tools/latest
-        if [ ! -f $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager ]; then
-          wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $ANDROID_HOME/cmdline-tools/latest
+        mkdir -p $ANDROIDSDK/cmdline-tools
+        cd $ANDROIDSDK/cmdline-tools
+        if [ ! -d latest ]; then
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip
+          mv cmdline-tools latest
+          rm cmdline-tools.zip
         fi
 
-    - name: Install SDK packages and accept licenses
+    - name: Accept SDK licenses
       run: |
-        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
-        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-        yes | sdkmanager --install "platform-tools" "build-tools;36.1.0" --licenses
+        export ANDROID_HOME=$ANDROIDSDK
+        SDKMANAGER="$ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager"
+        if [ ! -f "$SDKMANAGER" ]; then
+          SDKMANAGER="$ANDROID_HOME/cmdline-tools/latest/cmdline-tools/bin/sdkmanager"
+        fi
+        chmod +x "$SDKMANAGER"
+        yes | "$SDKMANAGER" --install "platform-tools" "build-tools;36.1.0" --licenses
 
-    - name: Build APK
+    - name: Build APK with Buildozer
       run: |
+        export PATH=$HOME/.local/bin:$PATH
         buildozer -v android debug
