--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,53 +6,42 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     env:
-      ANDROID_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
-      ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk
       ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+      ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
+      PATH: ${{ github.workspace }}/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
 
     steps:
-    # 1. Install required system packages
-    - name: Install system tools
-      run: |
-        sudo apt update
-        sudo apt install -y python3-pip python3-venv python3-dev build-essential \
-            zip unzip tar wget git openjdk-17-jdk zlib1g-dev libncurses5-dev \
-            libstdc++6 libffi-dev libssl-dev
-
-    # 2. Checkout repository
-    - name: Checkout repository
+    - name: Checkout repo
       uses: actions/checkout@v3
 
-    # 3. Install pip packages (buildozer, cython, etc.)
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3 python3-pip python3-venv openjdk-17-jdk unzip wget tar git build-essential libncurses5
 
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install buildozer cython
+        python3 -m pip install --upgrade pip
+        pip install cython buildozer
 
-    # 4. Accept Android SDK licenses
-    - name: Install Android SDK Command Line Tools
+    - name: Setup Android SDK Commandline Tools
       run: |
-        mkdir -p $ANDROID_HOME/cmdline-tools
-        cd $ANDROID_HOME/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        cd $ANDROID_SDK_ROOT/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9123335_latest.zip -O tools.zip
+        unzip -o tools.zip
         mv cmdline-tools latest
-        rm cmdline-tools.zip
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+        rm tools.zip
 
-    # 5. Install Buildozer requirements
-    - name: Install Buildozer requirements
-      run: sudo apt install -y python3-pip python3-setuptools python3-wheel
-
-    # 6. Build the APK
-    - name: Build APK
+    - name: Accept Android SDK Licenses
       run: |
-        cd $GITHUB_WORKSPACE
-        buildozer android debug
+        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+
+    - name: Install Build Tools and Platforms
+      run: |
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
+
+    - name: Run Buildozer
+      run: |
+        buildozer -v android debug
