--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,53 +2,56 @@ name: Build MusicController APK
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
-  build:
+  android:
     runs-on: ubuntu-latest
+
     env:
-      ANDROIDSDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
-      ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
-      ANDROID_NDK: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+      ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk
+      PATH: ${{ github.workspace }}/.buildozer/android/platform/cmdline-tools/latest/bin:$PATH
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3 python3-pip python3-venv git zip unzip openjdk-17-jdk wget tar curl autoconf libtool pkg-config build-essential
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
 
-      - name: Set up Python environment
-        run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install cython buildozer
+    - name: Set up virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+        pip install --upgrade pip
+        pip install cython buildozer
 
-      - name: Ensure Buildozer cache directories
-        run: |
-          mkdir -p $HOME/.buildozer/android/platform
+    - name: Install required system tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y zip unzip openjdk-17-jdk wget tar curl
 
-      - name: Install Android SDK command line tools
-        run: |
-          mkdir -p $ANDROIDSDK_ROOT/cmdline-tools
-          cd $ANDROIDSDK_ROOT/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          mv cmdline-tools latest
-          rm cmdline-tools.zip
+    - name: Download Android SDK Command-line Tools
+      run: |
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip -q cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
+        mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
+        rm cmdline-tools.zip
 
-      - name: Accept Android licenses
-        run: |
-          yes | $ANDROIDSDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
-          yes | $ANDROIDSDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
+    - name: Accept SDK licenses
+      run: |
+        yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
 
-      - name: Build APK with Buildozer
-        run: |
-          source venv/bin/activate
-          buildozer android debug
+    - name: Install SDK build tools & platforms
+      run: |
+        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
+
+    - name: Build APK with Buildozer
+      run: |
+        source venv/bin/activate
+        buildozer -v android debug
