--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,46 +10,42 @@ jobs:
   android:
     runs-on: ubuntu-latest
     env:
-      ANDROID_SDK_ROOT: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+      ANDROID_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
       ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
-      PATH: ${{ github.workspace }}/venv/bin:$PATH
+      PATH: ${{ github.workspace }}/venv/bin:${{ github.workspace }}/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
 
     steps:
-    - name: Ensure tar is installed
-      run: sudo apt-get update && sudo apt-get install -y tar unzip curl git python3-pip python3-venv build-essential
-
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.11
+    - name: Setup Python 3.11 and virtualenv
       uses: actions/setup-python@v4
       with:
         python-version: 3.11
 
-    - name: Create and activate virtualenv
+    - name: Create virtual environment & install Buildozer
       run: |
         python -m venv venv
         source venv/bin/activate
         pip install --upgrade pip
         pip install buildozer cython
 
-    - name: Install Android SDK Command Line Tools
+    - name: Download Android SDK Command Line Tools
       run: |
-        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
-        cd $ANDROID_SDK_ROOT/cmdline-tools
-        curl -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip sdk-tools.zip
-        mv cmdline-tools latest
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        curl -L -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip sdk-tools.zip -d $ANDROID_HOME/cmdline-tools
+        mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
         rm sdk-tools.zip
 
-    - name: Accept Android licenses
-      run: yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+    - name: Accept all Android licenses
+      run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
 
-    - name: Install Android Build Tools & Platforms
+    - name: Install Android platforms and build tools
       run: |
-        $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
 
-    - name: Run Buildozer
+    - name: Build APK (multi-arch)
       run: |
         source venv/bin/activate
-        buildozer -v android debug
+        buildozer android debug --arch arm64-v8a --arch armeabi-v7a -v
