--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,40 +12,48 @@ jobs:
     env:
       ANDROID_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
       ANDROID_NDK_HOME: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
-      PATH: ${{ github.workspace }}/venv/bin:${{ github.workspace }}/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:$PATH
+      PATH: ${{ github.workspace }}/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin:${{ github.workspace }}/.buildozer/android/platform/android-sdk/platform-tools:$PATH
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Setup Python 3.11 and virtualenv
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: 3.11
 
-    - name: Create virtual environment & install Buildozer
+    - name: Install build tools in user space
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install --upgrade buildozer cython
+
+    - name: Ensure required tools
+      run: |
+        mkdir -p $HOME/.buildozer/tools
+        sudo apt-get update || true
+        sudo apt-get install -y tar unzip curl git python3-venv || true
+
+    - name: Install Android SDK cmdline-tools
+      run: |
+        mkdir -p $ANDROID_HOME/cmdline-tools
+        cd $ANDROID_HOME/cmdline-tools
+        curl -o commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+        unzip commandlinetools.zip
+        mv cmdline-tools latest
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+
+    - name: Build APK
       run: |
         python -m venv venv
         source venv/bin/activate
         pip install --upgrade pip
         pip install buildozer cython
+        buildozer android debug
 
-    - name: Download Android SDK Command Line Tools
-      run: |
-        mkdir -p $ANDROID_HOME/cmdline-tools
-        curl -L -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-        unzip sdk-tools.zip -d $ANDROID_HOME/cmdline-tools
-        mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
-        rm sdk-tools.zip
-
-    - name: Accept all Android licenses
-      run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
-
-    - name: Install Android platforms and build tools
-      run: |
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0"
-
-    - name: Build APK (multi-arch)
-      run: |
-        source venv/bin/activate
-        buildozer android debug --arch arm64-v8a --arch armeabi-v7a -v
+    - name: Upload APK
+      if: success()
+      uses: actions/upload-artifact@v3
+      with:
+        name: MusicController-debug.apk
+        path: bin/*.apk
